<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_gradient"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/device_no_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:padding="@dimen/dp_20"
            android:text="@string/device_no"
            android:textColor="@color/colorWhite"
            android:textSize="26px"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/service_tel_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/dp_20"
            android:text="@string/service_mobile"
            android:textColor="@color/colorWhite"
            android:textSize="26px"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/service_tel_text"
            android:padding="@dimen/dp_20"
            android:text="v1.1.2"
            android:layout_marginRight="5dp"
            android:textColor="@color/colorWhite"
            android:textSize="26px"
            android:textStyle="bold" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/login_return_btn"
        android:layout_width="120px"
        android:layout_height="120px"
        android:layout_margin="@dimen/dp_30"
        android:background="#00000000"
        android:scaleType="fitXY"
        android:src="@drawable/top_btn_return" />

    <LinearLayout
        android:layout_width="320px"
        android:layout_height="320px"
        android:layout_gravity="center"
        android:layout_marginBottom="120px"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/machine_logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="120px"
        android:layout_marginStart="120px"
        android:background="@drawable/shape_login_edit_view"
        android:orientation="horizontal"
        android:paddingBottom="20px"
        android:paddingEnd="50px"
        android:paddingStart="50px"
        android:paddingTop="20px">

        <ImageView
            android:layout_width="70px"
            android:layout_height="80px"
            android:scaleType="fitXY"
            android:src="@drawable/login_mobile_icon" />

        <EditText
            android:id="@+id/mobile_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="80px"
            android:layout_marginStart="80px"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/mobile_placeholder"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:textColor="@color/colorWhite"
            android:textColorHint="#A8DBFB"
            android:textSize="60px" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="120px"
        android:layout_marginStart="120px"
        android:layout_marginTop="60px"
        android:background="@drawable/shape_login_edit_view"
        android:orientation="horizontal"
        android:paddingBottom="20px"
        android:paddingEnd="50px"
        android:paddingStart="50px"
        android:paddingTop="20px">

        <ImageView
            android:layout_width="70px"
            android:layout_height="80px"
            android:scaleType="fitXY"
            android:src="@drawable/login_pwd_icon" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="80px"
            android:layout_marginStart="80px"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/password_placeholder"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"
            android:textColorHint="#A8DBFB"
            android:textSize="60px" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140px"
        android:layout_gravity="center"
        android:layout_marginEnd="140px"
        android:layout_marginStart="140px"
        android:layout_marginTop="100px"
        android:background="@drawable/shape_larger_btn"
        android:gravity="center">

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="64px"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="40px"
        android:gravity="center">

        <ImageView
            android:id="@+id/activate_qr_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>